LIN-4884/LIN-4894 Vaadin 25.2-beta1
Change-Id: Iae3865ec752152d8b783b934be4d1ce3936fd886